--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 }
 
 h1 {
-    color: #F28705;
+    color: #D26900;
     margin-left: 5px;
     margin-top: 15px;
 }
@@ -54,13 +54,13 @@ h1 {
 }
 
 a {
-    color: orange;
+    color: #0056B3;
     text-decoration: none;
     transition: all 0.3s ease;
 }
 
 a:hover {
-    color: red;
+    color: #003D82;
     transform: translateY(-2px);
 }
 
